# PhotoEditor

./: CMakeLists.txt  vcpkg.json
App/: App.hpp  Frame.hpp  Helper.ixx  Main.cpp  Resources.ixx
CudaFilters/: CMakeLists.txt  FiltersCuda.cu
Filters/: Filters.ixx
